fix z-index filters-list + lightbox

--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -9,6 +9,7 @@
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    z-index: 999;
 }
 
 #lightbox-close{
